{0.0.46} WIP(employee): refactor EmployeeService to use ImageUtil for image processing, add logs