@@ -2,7 +2,6 @@ package ua.shpp.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.imgscalr.Scalr;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import ua.shpp.dto.EmployeeRequestDTO;
@@ -15,16 +14,13 @@ import ua.shpp.mapper.EmployeeMapper;
 import ua.shpp.repository.BranchRepository;
 import ua.shpp.repository.EmployeeRepository;
 import ua.shpp.repository.ServiceRepository;
+import ua.shpp.util.ImageUtil;
 
-import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.Base64;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -39,25 +35,39 @@ public class EmployeeService {
     private final int MAX_AVATAR_SIZE_MB = 3;
 
     public EmployeeResponseDTO createEmployee(MultipartFile avatarImg, EmployeeRequestDTO employeeDTO) {
+        log.info("Find by id: {} branch", employeeDTO.branchId());
         BranchEntity branch = branchRepository.findById(employeeDTO.branchId())
                 .orElseThrow(() -> new RuntimeException("Branch with id " + employeeDTO.branchId() + " not found"));
+        log.info("Branch was found with name: {}, employees num: {}, services num: {}",
+                branch.getName(), branch.getEmployees().size(), branch.getServiceEntities().size());
 
         Set<Long> expectedExistingServicesIds = employeeDTO.existingServicesIds();
+        log.info("Passed as existing services ids: {}", expectedExistingServicesIds);
 
         log.info("Finding in db service entities with ids: {}", expectedExistingServicesIds);
         List<ServiceEntity> existingServicesEntity = serviceRepository.findAllById(expectedExistingServicesIds);
+        log.info("Found services with names: {}, ids: {}", existingServicesEntity.stream().map(ServiceEntity::getName),
+                expectedExistingServicesIds);
 
         checkExistingServicesById(employeeDTO.existingServicesIds(), existingServicesEntity);
 
         int kilobyte = 1024;
-        log.info("Image size: {} MB", avatarImg.getSize() / (kilobyte * kilobyte));
+        double imageSizeInMB = (double) avatarImg.getSize() / (kilobyte * kilobyte);
+        log.info("Image size: {} MB", String.format("%.2f", imageSizeInMB));
         if (avatarImg.getSize() > MAX_AVATAR_SIZE_MB * kilobyte * kilobyte) {
             throw new RuntimeException("File size exceeds the maximum allowed size of " + MAX_AVATAR_SIZE_MB + " MB");
         }
+        log.info("Mapping EmployeeRequestDTO to EmployeeEntity");
         EmployeeEntity employeeEntity = employeeMapper.EmployeeRequestDTOToEmployeeEntity(employeeDTO);
+        log.info("After mapping: employee entity id: {}, branch: {}, services: {}", employeeEntity.getId(),
+                employeeEntity.getBranch(), employeeEntity.getServices());
+
         employeeEntity.setBranch(branch);
+        log.info("After set branch: employee entity id: {}, branchId: {}, services: {}", employeeEntity.getId(),
+                employeeEntity.getBranch().getId(), employeeEntity.getServices());
 
         Set<EmployeeServiceCreateDTO> newServices = employeeDTO.newServicesDTO();
+        log.info("New services: {}", newServices);
 
         List<ServiceEntity> newServiceEntities = newServices.stream()
                 .map(dto -> {
@@ -65,21 +75,28 @@ public class EmployeeService {
                     service.setName(dto.name());
                     service.setColor(dto.color());
                     service.setBranch(branch);
+                    log.info("Adding new service with name: {}, color: {}, branchId: {}", service.getName(),
+                            service.getColor(), service.getBranch().getId());
                     return service;
-                })
-                .toList();
+                }).collect(Collectors.toCollection(ArrayList::new));
+
+
+        log.info("New services names: {}, ids: {}",
+                newServiceEntities.stream().map(ServiceEntity::getName).collect(Collectors.toList()),
+                newServiceEntities.stream().map(ServiceEntity::getId).collect(Collectors.toList()));
 
         newServiceEntities = serviceRepository.saveAll(newServiceEntities);
-        newServiceEntities.addAll(existingServicesEntity);
-        employeeEntity.setServices(new HashSet<>(existingServicesEntity));
 
-        byte[] resizedBytesAvatar = resizeImage(avatarImg, AVATAR_WIDTH, AVATAR_HEIGHT);
+        newServiceEntities.addAll(existingServicesEntity);
+        employeeEntity.setServices(new HashSet<>(newServiceEntities));
+
+        byte[] resizedBytesAvatar = ImageUtil.resizeImage(avatarImg, AVATAR_WIDTH, AVATAR_HEIGHT);
 
         employeeEntity.setAvatar(resizedBytesAvatar);
 
         employeeEntity = employeeRepository.save(employeeEntity);
 
-        String base64Avatar = convertImageToBase64(resizedBytesAvatar);
+        String base64Avatar = ImageUtil.convertImageToBase64(resizedBytesAvatar);
 
         return employeeMapper.employeeEntityToEmployeeResponseDTO(employeeEntity, base64Avatar);
     }
@@ -93,9 +110,11 @@ public class EmployeeService {
      * @throws RuntimeException if one or more service IDs from the expected list do not exist in the database.
      */
     private void checkExistingServicesById(Set<Long> expectedExistingServicesIds, List<ServiceEntity> existingServicesEntity) {
+        log.info("Checking service existence. Expected IDs: {}", expectedExistingServicesIds);
         List<Long> existingServicesIds = existingServicesEntity.stream()
                 .map(ServiceEntity::getId)
                 .toList();
+        log.info("Services found in DB (IDs): {}", existingServicesIds);
 
         List<Long> notFoundServiceIds = expectedExistingServicesIds.stream()
                 .filter(id -> !existingServicesIds.contains(id))
@@ -104,60 +123,6 @@ public class EmployeeService {
         if (!notFoundServiceIds.isEmpty()) {
             throw new RuntimeException("There are no services with id " + notFoundServiceIds);
         }
-    }
-
-    private byte[] resizeImage(MultipartFile img, int targetWidth, int targetHeight) {
-        BufferedImage avatar = multipartToBufferedImage(img);
-        String imgFormat = getImageFormat(img);
-
-        log.info("Resizing image width: {}, height: {}", avatar.getWidth(), avatar.getHeight());
-        BufferedImage resizedAvatar = Scalr.resize(avatar, Scalr.Mode.FIT_EXACT,  targetWidth, targetHeight);
-        log.info("Resizing image width: {}, height: {}", resizedAvatar.getWidth(), resizedAvatar.getHeight());
-
-        return bufferedImageToBytes(resizedAvatar, imgFormat);
-    }
-
-    private String convertImageToBase64(byte[] imageBytes) {
-        return Base64.getEncoder().encodeToString(imageBytes);
-    }
-
-    private byte[] bufferedImageToBytes(BufferedImage bufferedImage, String imgFormat) {
-        try (ByteArrayOutputStream baos = new ByteArrayOutputStream()) {
-
-            ImageIO.write(bufferedImage, imgFormat, baos);
-            return baos.toByteArray();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private BufferedImage multipartToBufferedImage(MultipartFile img) {
-        try {
-            InputStream inputStream = img.getInputStream();
-
-            return ImageIO.read(inputStream);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private String getImageFormat(MultipartFile img) {
-        log.info("Image name: {}. Image type: {}", img.getOriginalFilename(), img.getContentType());
-        String contentType = img.getContentType();
-
-        if (contentType != null) {
-            if (contentType.contains("jpeg")) {
-                return "JPEG";
-            } else if (contentType.contains("png")) {
-                return "PNG";
-            } else if (contentType.contains("heic")) {
-                return "HEIC";
-            } else if (contentType.contains("webp")) {
-                return "WEBP";
-            } else {
-                throw new RuntimeException("Unsupported image format: " + contentType);
-            }
-        }
-        throw new RuntimeException("Unable to determine image format");
+        log.info("All provided service IDs are valid and exist in the database.");
     }
 }
